[gd_scene load_steps=26 format=2]

[ext_resource path="res://scenes/Widgets/PlusMinusWidget.gd" type="Script" id=1]
[ext_resource path="res://assets/images/pistol.png" type="Texture" id=2]
[ext_resource path="res://scenes/Widgets/PlusMinusWidget.tscn" type="PackedScene" id=3]

[sub_resource type="GDScript" id=1]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_power_btn_counter\"), self, \"update_count_value\")
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_power_btn_pressed\"), self, \"update_pressed\")


func update_count_value(new_val):
    text = str(new_val)

func update_pressed(pressed):
    if pressed == 0:
        self_modulate = Color(\"ffffff\")
    else:
        self_modulate = Color(\"db0101\")
"

[sub_resource type="GDScript" id=2]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_reload_btn_counter\"), self, \"update_count_value\")
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_reload_btn_pressed\"), self, \"update_pressed\")


func update_count_value(new_val):
    text = str(new_val)

func update_pressed(pressed):
    if pressed == 0:
        self_modulate = Color(\"ffffff\")
    else:
        self_modulate = Color(\"db0101\")
"

[sub_resource type="GDScript" id=3]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_thumb_btn_counter\"), self, \"update_count_value\")
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_thumb_btn_pressed\"), self, \"update_pressed\")


func update_count_value(new_val):
    text = str(new_val)

func update_pressed(pressed):
    if pressed == 0:
        self_modulate = Color(\"ffffff\")
    else:
        self_modulate = Color(\"db0101\")
    
"

[sub_resource type="GDScript" id=4]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_trigger_btn_counter\"), self, \"update_count_value\")
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_trigger_btn_pressed\"), self, \"update_pressed\")


func update_count_value(new_val):
    text = str(new_val)

func update_pressed(pressed):
    if pressed == 0:
        self_modulate = Color(\"ffffff\")
    else:
        self_modulate = Color(\"db0101\")
"

[sub_resource type="GDScript" id=5]
script/source = "extends RichTextLabel


var tracked_power_btn = 0
var tracked_trigger_btn = 0
var tracked_thumb_btn = 0
var tracked_reload_btn = 0


# Called when the node enters the scene tree for the first time.
func _ready():
    add_to_group(\"FreecoiL\")
    Settings.Session.connect(Settings.Session.monitor_data(\"game_weapon_magazine_ammo\"), self, \"weapon_ammo_changed\")


func fi_command_accepted():
    text += \"Command Accepted.\\n\"

func fi_player_id_changed():
    text += \"Player Laser ID Changed to \" + str(FreecoiLInterface.laser_gun_id) + \".\\n\"

func weapon_ammo_changed(new_val):
    text += \"Weapon Ammo is now \" + str(new_val) + \".\\n\"

func fi_buttons_pressed(powerBtnPressed, triggerBtnPressed, thumbBtnPressed, reloadBtnPressed):
    if tracked_power_btn != powerBtnPressed:
        tracked_power_btn = powerBtnPressed
        text += \"Power button state = \" + str(tracked_power_btn) + \".\\n\"
    if tracked_trigger_btn != triggerBtnPressed:
        tracked_trigger_btn = triggerBtnPressed
        text += \"Trigger button state = \" + str(tracked_trigger_btn) + \".\\n\"
    if tracked_thumb_btn != thumbBtnPressed:
        tracked_thumb_btn = thumbBtnPressed
        text += \"Thumb button state = \" + str(tracked_thumb_btn) + \".\\n\"
    if tracked_reload_btn != reloadBtnPressed:
        tracked_reload_btn = reloadBtnPressed
        text += \"Reload button state = \" + str(tracked_reload_btn) + \".\\n\"
"

[sub_resource type="GDScript" id=6]
script/source = "extends Button

var count = 0
onready var LaserId = get_parent().get_node(\"PlusMinusWidget\")
onready var WpnPrfl = get_parent().get_node(\"PlusMinusWidget2\")
onready var RichText = get_parent().get_node(\"RichTextLabel\")
onready var NarrowPwr = get_parent().get_node(\"PlusMinusWidget3\")
onready var WidePwr = get_parent().get_node(\"PlusMinusWidget4\")
onready var RateOfFire = get_parent().get_node(\"PlusMinusWidget5\")


# Called when the node enters the scene tree for the first time.
func _ready():
    pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#    pass


func _on_Button5_pressed():
    if count == 0:
        FreecoiLInterface.enable_recoil(false)
        Settings.Session.set_data(\"game_player_alive\", true)
    count += 1
    if Settings.Session.get_data(\"fi_laser_status\") == 3:
        FreecoiLInterface.reload_start()
        yield(get_tree().create_timer(0.1), \"timeout\")
        FreecoiLInterface.set_laser_id(LaserId.current_val)
        yield(get_tree().create_timer(0.1), \"timeout\")
        if RateOfFire.current_val == 0:
            FreecoiLInterface.new_set_shot_mode(\"single\", NarrowPwr.current_val, WidePwr.current_val)
        elif RateOfFire.current_val == 3:
            FreecoiLInterface.new_set_shot_mode(\"burst\", NarrowPwr.current_val, WidePwr.current_val)
        elif RateOfFire.current_val == 1:
            FreecoiLInterface.new_set_shot_mode(\"auto\", NarrowPwr.current_val, WidePwr.current_val)
        else:
            FreecoiLInterface.new_set_shot_mode(\"custom\", NarrowPwr.current_val, WidePwr.current_val, RateOfFire.current_val)
        yield(get_tree().create_timer(0.2), \"timeout\") 
        FreecoiLInterface.reload_finish(20, LaserId.current_val, WpnPrfl.current_val)
        RichText.text += \"Updated Laser ID via set_laser_id. \" + str(Settings.Session.get_data(\"fi_laser_status\")) + \"\\n\"
    else:
        FreecoiLInterface.reload_start()
        while Settings.Session.get_data(\"fi_laser_status\") == 2:
            yield(get_tree().create_timer(0.1), \"timeout\")
        if RateOfFire.current_val == 0:
            FreecoiLInterface.new_set_shot_mode(\"single\", NarrowPwr.current_val, WidePwr.current_val)
        elif RateOfFire.current_val == 3:
            FreecoiLInterface.new_set_shot_mode(\"burst\", NarrowPwr.current_val, WidePwr.current_val)
        elif RateOfFire.current_val == 1:
            FreecoiLInterface.new_set_shot_mode(\"auto\", NarrowPwr.current_val, WidePwr.current_val)
        else:
            FreecoiLInterface.new_set_shot_mode(\"custom\", NarrowPwr.current_val, WidePwr.current_val, RateOfFire.current_val)
        yield(get_tree().create_timer(0.1), \"timeout\")
        FreecoiLInterface.reload_finish(20, LaserId.current_val, WpnPrfl.current_val)
        RichText.text += \"Updated Laser ID via Reload Finish.\\n\"

func _on_PlusMinusWidget_PMWidChanged(__):
    pass
"

[sub_resource type="GDScript" id=7]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_laser_id\"), self, \"update_val\")


func update_val(new_val):
    text = \"Laser ID=\" + str(new_val)
"

[sub_resource type="GDScript" id=8]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_laser_status\"), self, \"update_val\")


func update_val(new_val):
    text = \"Status=\" + str(new_val)
"

[sub_resource type="GDScript" id=9]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_command_id\"), self, \"update_command_id\")


func update_command_id(new_val):
    text = \"Command ID=\" + str(new_val)
"

[sub_resource type="GDScript" id=10]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
    Settings.Session.connect(Settings.Session.monitor_data(\"game_weapon_magazine_ammo\"), self, \"weapon_ammo_changed\")


func weapon_ammo_changed(new_val):
    text = \"AmmoRemaining=\" + str(new_val)
"

[sub_resource type="GDScript" id=11]
script/source = "extends Label



# Called when the node enters the scene tree for the first time.
func _ready():
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_wpn_prfl\"), self, \"update_val\")


func update_val(new_val):
    text = \"WeaponProfile=\" + str(new_val)



"

[sub_resource type="GDScript" id=12]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_shooter1_laser_id\"), self, \"update_val\")


func update_val(new_val):
    if new_val != 0:
        text = \"Shooter1ID=\" + str(new_val)
"

[sub_resource type="GDScript" id=13]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_shot_counter_1\"), self, \"update_val\")


func update_val(new_val):
    if new_val != 0:
        text = \"ShotCounter1=\" + str(new_val)
"

[sub_resource type="GDScript" id=14]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_shooter1_wpn_prfl\"), self, \"update_val\")


func update_val(new_val):
    if new_val != 0:
        text = \"Shooter1WpnProfile=\" + str(new_val)
"

[sub_resource type="GDScript" id=15]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_shooter1_charge\"), self, \"update_val\")


func update_val(new_val):
    if new_val != 0:
        text = \"Shooter1Charge=\" + str(new_val)
"

[sub_resource type="GDScript" id=16]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_shooter1_sensor_clip\"), self, \"update_val\")


func update_val(new_val):
    if new_val != 0:
        self_modulate = Color(\"db0101\")
        yield(get_tree().create_timer(0.2), \"timeout\") 
        self_modulate = Color(\"ffffff\")
        yield(get_tree().create_timer(0.2), \"timeout\") 
        self_modulate = Color(\"db0101\")
        yield(get_tree().create_timer(0.2), \"timeout\") 
        self_modulate = Color(\"ffffff\")
"

[sub_resource type="GDScript" id=17]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_shooter1_sensor_front\"), self, \"update_val\")


func update_val(new_val):
    if new_val != 0:
        self_modulate = Color(\"db0101\")
        yield(get_tree().create_timer(0.2), \"timeout\") 
        self_modulate = Color(\"ffffff\")
        yield(get_tree().create_timer(0.2), \"timeout\") 
        self_modulate = Color(\"db0101\")
        yield(get_tree().create_timer(0.2), \"timeout\") 
        self_modulate = Color(\"ffffff\")
"

[sub_resource type="GDScript" id=18]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_shooter1_sensor_left\"), self, \"update_val\")


func update_val(new_val):
    if new_val != 0:
        self_modulate = Color(\"db0101\")
        yield(get_tree().create_timer(0.2), \"timeout\") 
        self_modulate = Color(\"ffffff\")
        yield(get_tree().create_timer(0.2), \"timeout\") 
        self_modulate = Color(\"db0101\")
        yield(get_tree().create_timer(0.2), \"timeout\") 
        self_modulate = Color(\"ffffff\")
"

[sub_resource type="GDScript" id=19]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
    Settings.Session.connect(Settings.Session.monitor_data(\"fi_shooter1_sensor_right\"), self, \"update_val\")


func update_val(new_val):
    if new_val != 0:
        self_modulate = Color(\"db0101\")
        yield(get_tree().create_timer(0.2), \"timeout\") 
        self_modulate = Color(\"ffffff\")
        yield(get_tree().create_timer(0.2), \"timeout\") 
        self_modulate = Color(\"db0101\")
        yield(get_tree().create_timer(0.2), \"timeout\") 
        self_modulate = Color(\"ffffff\")
"

[sub_resource type="GDScript" id=20]
script/source = "extends Button

onready var RateOfFire = get_parent().get_node(\"PlusMinusWidget5\")


# Called when the node enters the scene tree for the first time.
func _ready():
    pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#    pass


func _on_Button6_pressed():
    RateOfFire.current_val = 0
"

[sub_resource type="GDScript" id=21]
script/source = "extends Button


onready var RateOfFire = get_parent().get_node(\"PlusMinusWidget5\")


# Called when the node enters the scene tree for the first time.
func _ready():
    pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#    pass


func _on_Button7_pressed():
    RateOfFire.current_val = 3
"

[sub_resource type="GDScript" id=22]
script/source = "extends Button


onready var RateOfFire = get_parent().get_node(\"PlusMinusWidget5\")


# Called when the node enters the scene tree for the first time.
func _ready():
    pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#    pass


func _on_Button8_pressed():
    RateOfFire.current_val = 1
"

[node name="GunTester" type="Control"]
margin_right = 540.0
margin_bottom = 960.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 265, 430 )
rotation = 4.71239
scale = Vector2( 1.3, 1.2 )
texture = ExtResource( 2 )

[node name="Button" type="Label" parent="."]
margin_left = 95.4092
margin_top = 222.247
margin_right = 155.409
margin_bottom = 258.247
text = "00"
align = 1
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Label" parent="."]
margin_left = 468.0
margin_top = 117.0
margin_right = 528.0
margin_bottom = 153.0
rect_min_size = Vector2( 60, 0 )
text = "00"
align = 1
script = SubResource( 2 )

[node name="Button3" type="Label" parent="."]
margin_left = 65.0538
margin_top = 50.2836
margin_right = 119.054
margin_bottom = 86.2836
rect_min_size = Vector2( 60, 0 )
text = "00"
align = 1
script = SubResource( 3 )

[node name="Button4" type="Label" parent="."]
margin_left = 252.45
margin_top = 275.133
margin_right = 312.45
margin_bottom = 311.133
rect_min_size = Vector2( 60, 0 )
text = "00"
align = 1
script = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 2.0
margin_top = 846.0
margin_right = 538.0
margin_bottom = 958.0
scroll_following = true
script = SubResource( 5 )

[node name="Button5" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 44.0
text = "Start Testing"
script = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusMinusWidget" type="CenterContainer" parent="." instance=ExtResource( 3 )]
margin_left = 278.125
margin_top = 125.001
margin_right = 427.125
margin_bottom = 172.001
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
apply_minimum_value = true
apply_maximum_value = true
maximum_value = 63

[node name="PlusMinusWidget2" type="CenterContainer" parent="." instance=ExtResource( 3 )]
margin_left = 351.081
margin_top = 264.293
margin_right = 500.081
margin_bottom = 311.293
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
apply_minimum_value = true
apply_maximum_value = true
maximum_value = 15

[node name="Label" type="Label" parent="."]
margin_left = 261.0
margin_top = 87.0
margin_right = 463.0
margin_bottom = 123.0
text = "Laser ID=00"
script = SubResource( 7 )

[node name="Label20" type="Label" parent="."]
margin_left = 380.637
margin_top = 46.021
margin_right = 533.637
margin_bottom = 82.021
text = "Status=0"
script = SubResource( 8 )

[node name="Label10" type="Label" parent="."]
margin_left = 267.146
margin_top = 8.97968
margin_right = 407.146
margin_bottom = 44.9797
rect_min_size = Vector2( 263, 0 )
text = "Command Id=00"
script = SubResource( 9 )

[node name="Label11" type="Label" parent="."]
margin_left = 185.0
margin_top = 179.0
margin_right = 534.0
margin_bottom = 215.0
rect_min_size = Vector2( 349, 0 )
text = "AmmoRemaining=000"
script = SubResource( 10 )

[node name="Label21" type="Label" parent="."]
margin_left = 233.0
margin_top = 223.0
margin_right = 531.0
margin_bottom = 259.0
text = "WeaponProfile=00"
script = SubResource( 11 )

[node name="Label2" type="Label" parent="."]
margin_left = 1.1225
margin_top = 302.105
margin_right = 248.122
margin_bottom = 338.105
text = "Shooter1ID=00"
script = SubResource( 12 )

[node name="Label18" type="Label" parent="."]
margin_left = -2.24487
margin_top = 337.514
margin_right = 282.755
margin_bottom = 373.514
text = "ShotCounter1=00"
script = SubResource( 13 )

[node name="Label4" type="Label" parent="."]
margin_left = -5.61224
margin_top = 374.146
margin_right = 378.388
margin_bottom = 410.146
text = "Shooter1WpnProfile=00"
script = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label12" type="Label" parent="."]
margin_left = -6.12238
margin_top = 644.741
margin_right = 381.878
margin_bottom = 680.741
text = "Shooter2WpnProfile=00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = -2.24487
margin_top = 406.698
margin_right = 381.755
margin_bottom = 442.698
text = "Shooter1Charge=00"
script = SubResource( 15 )

[node name="Label13" type="Label" parent="."]
margin_left = -2.87744
margin_top = 679.537
margin_right = 369.123
margin_bottom = 715.537
text = "Shooter2ChargeLvl=00"

[node name="Label6" type="Label" parent="."]
margin_left = -2.36743
margin_top = 437.183
margin_right = 319.633
margin_bottom = 473.183
text = "Shooter1SensorClip"
script = SubResource( 16 )

[node name="Label14" type="Label" parent="."]
margin_left = -0.122498
margin_top = 712.268
margin_right = 325.878
margin_bottom = 748.268
text = "Shooter2SensorClip"

[node name="Label7" type="Label" parent="."]
margin_left = -3.48987
margin_top = 470.857
margin_right = 348.51
margin_bottom = 506.857
text = "Shooter1SensorFront"
script = SubResource( 17 )

[node name="Label15" type="Label" parent="."]
margin_left = 1.0
margin_top = 748.187
margin_right = 357.0
margin_bottom = 784.187
text = "Shooter2SensorFront"

[node name="Label8" type="Label" parent="."]
margin_left = -4.0
margin_top = 505.898
margin_right = 321.0
margin_bottom = 541.898
text = "Shooter1SensorLeft"
script = SubResource( 18 )

[node name="Label16" type="Label" parent="."]
margin_left = 1.0
margin_top = 778.493
margin_right = 330.0
margin_bottom = 814.493
text = "Shooter2SensorLeft"

[node name="Label9" type="Label" parent="."]
margin_left = -4.6123
margin_top = 541.94
margin_right = 338.388
margin_bottom = 577.94
text = "Shooter1SensorRight"
script = SubResource( 19 )

[node name="Label17" type="Label" parent="."]
margin_left = -2.36737
margin_top = 809.922
margin_right = 344.633
margin_bottom = 845.922
text = "Shooter2SensorRight"

[node name="Label3" type="Label" parent="."]
margin_left = 1.0
margin_top = 573.0
margin_right = 252.0
margin_bottom = 609.0
text = "Shooter2ID=00"

[node name="Label19" type="Label" parent="."]
margin_left = -0.122437
margin_top = 609.409
margin_right = 250.878
margin_bottom = 645.409
text = "Shooter2ID=00"

[node name="Label22" type="Label" parent="."]
margin_left = 342.258
margin_top = 335.139
margin_right = 536.258
margin_bottom = 371.139
text = "NarrowPwr"

[node name="PlusMinusWidget3" type="CenterContainer" parent="." instance=ExtResource( 3 )]
margin_left = 381.756
margin_top = 377.976
margin_right = 530.756
margin_bottom = 424.976
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
current_val = 15
apply_minimum_value = true
apply_maximum_value = true
maximum_value = 255

[node name="Label23" type="Label" parent="."]
margin_left = 385.536
margin_top = 447.272
margin_right = 532.536
margin_bottom = 483.272
text = "WidePwr"

[node name="Label24" type="Label" parent="."]
margin_left = 358.536
margin_top = 555.272
margin_right = 534.536
margin_bottom = 591.272
text = "RateOfFire"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusMinusWidget4" type="CenterContainer" parent="." instance=ExtResource( 3 )]
margin_left = 386.796
margin_top = 493.889
margin_right = 535.796
margin_bottom = 540.889
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
current_val = 15
apply_minimum_value = true
apply_maximum_value = true
maximum_value = 255

[node name="PlusMinusWidget5" type="CenterContainer" parent="." instance=ExtResource( 3 )]
margin_left = 386.796
margin_top = 593.889
margin_right = 535.796
margin_bottom = 640.889
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
apply_minimum_value = true
apply_maximum_value = true
maximum_value = 255

[node name="Button6" type="Button" parent="."]
margin_left = 361.337
margin_top = 672.855
margin_right = 537.337
margin_bottom = 716.855
text = "SingleShot"
script = SubResource( 20 )

[node name="Button7" type="Button" parent="."]
margin_left = 361.337
margin_top = 736.855
margin_right = 538.337
margin_bottom = 780.855
text = "3RndBurst"
script = SubResource( 21 )

[node name="Button8" type="Button" parent="."]
margin_left = 360.337
margin_top = 799.855
margin_right = 537.337
margin_bottom = 843.855
text = "Full Auto"
script = SubResource( 22 )
[connection signal="pressed" from="Button5" to="Button5" method="_on_Button5_pressed"]
[connection signal="PMWidChanged" from="PlusMinusWidget" to="Button5" method="_on_PlusMinusWidget_PMWidChanged" flags=3]
[connection signal="pressed" from="Button6" to="Button6" method="_on_Button6_pressed" flags=3]
[connection signal="pressed" from="Button7" to="Button7" method="_on_Button7_pressed" flags=3]
[connection signal="pressed" from="Button8" to="Button8" method="_on_Button8_pressed" flags=3]
