[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Widgets/PlusMinusWidget.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/BlackOpsOne-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
font_data = ExtResource( 2 )

[node name="PlusMinusWidget" type="CenterContainer"]
margin_right = 130.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 137.0
margin_bottom = 45.0

[node name="PlusBtn" type="Button" parent="HBoxContainer"]
margin_right = 33.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Display" type="Label" parent="HBoxContainer"]
margin_left = 37.0
margin_top = 3.0
margin_right = 103.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinusBtn" type="Button" parent="HBoxContainer"]
margin_left = 107.0
margin_right = 137.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 3 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/PlusBtn" to="." method="_on_PlusBtn_pressed" flags=3]
[connection signal="pressed" from="HBoxContainer/MinusBtn" to="." method="_on_MinusBtn_pressed" flags=3]
